# Fortunes-Palette-Compression

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  compile.bat  run.bat
src/: main.cpp  palette.cpp  palette.hpp
